customize for pano: add mod_auth stuff

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -20,7 +20,7 @@ server.modules = (
     "mod_access",
 #    "mod_cml",
 #    "mod_trigger_b4_dl",
-#    "mod_auth",
+    "mod_auth",
 #    "mod_status",
 #    "mod_setenv",
 #    "mod_proxy",
@@ -197,7 +197,9 @@ url.access-deny = ("~", ".inc")
 # {{{ mod_auth
 # see authentication.txt
 #
-# auth.backend               = "plain"
+auth.backend               = "htdigest"
+auth.backend.htdigest.userfile = "/etc/lighttpd/passwd.digest"
+auth.debug = 2
 # auth.backend.plain.userfile = "lighttpd.user"
 # auth.backend.plain.groupfile = "lighttpd.group"
 
@@ -205,6 +207,14 @@ url.access-deny = ("~", ".inc")
 # auth.backend.ldap.base-dn  = "dc=my-domain,dc=com"
 # auth.backend.ldap.filter   = "(uid=$)"
 
+# see https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModAuth
+auth.require = ( "/" =>
+    (	     
+	"method" => "digest",
+	"realm" => "authorized users only",
+	"require" => "valid-user"
+    )
+)
 # auth.require               = ( "/server-status" =>
 #                               (
 #                                 "method"  => "digest",
