fixed user permissions added users 'www' and group 'www' with appropriate groupid and userid.
modified lighttpd.conf to run as www:www

added comment about passwd.digest

--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -49,8 +49,8 @@ include "mime-types.conf"
 # }}}
 
 # {{{ server settings
-server.username      = "lighttpd"
-server.groupname     = "lighttpd"
+server.username      = "www"
+server.groupname     = "www"
 
 server.document-root = var.basedir + "/htdocs"
 server.pid-file      = "/run/lighttpd.pid"
